cf_analysis_results/checkerframework_3.42.0_results_WPI/url53f943c5cb_Praznat_AGP_tgz-pJ8-AMath_TestingJ8.txt
../dataset/june2020_dataset/url53f943c5cb_Praznat_AGP_tgz-pJ8-AMath_TestingJ8/src/Game/DefFile.java:23: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(file) $$ java.io.FileReader $$ possible exceptional exit due to inFile.readLine() with exception type java.io.IOException $$ ( 449, 471 ) $$ @MustCall method close may not have been invoked on new FileReader(file) or any of its aliases.
		            new FileReader( file ) );	
		            ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to inFile.readLine() with exception type java.io.IOException
1 error
